# aiken-codegen

./: .gitignore  CHANGELOG.md  README.md  aiken-codegen.cabal  flake.nix  justfile
.github/workflows/: ci.yml  release.yml
lib/Aiken/: Codegen.hs
test/: Golden.hs
test/golden/: call_no_args.golden  call_with_args.golden  empty_list.golden  eq.golden  hex_literal.golden  int_literal.golden  let_chain.golden  let_typed.golden  let_untyped.golden  list_of_ints.golden  module_asset_name_test.golden  module_inclusion_test.golden  module_insert_test.golden  module_mixed.golden  record_nested.golden  record_simple.golden  test_simple.golden  use_as.golden  use_from.golden  var.golden
