cabal-version:   3.0
name:            aiken-codegen
version:         0.1.0
synopsis:        Haskell DSL for generating Aiken source code
description:
  A minimal Haskell AST for the Aiken language subset needed
  for code generation. Construct expressions as data, render
  to source, let @aiken fmt@ normalize.

license:         Apache-2.0
license-file:    LICENSE
copyright:       (c) 2026 Paolo Veronelli
author:          Paolo Veronelli
maintainer:      paolo.veronelli@gmail.com
category:        Language
build-type:      Simple
extra-doc-files: README.md
homepage:        https://github.com/paolino/aiken-codegen
bug-reports:     https://github.com/paolino/aiken-codegen/issues

common language
  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    GADTs
    LambdaCase
    OverloadedStrings
    StrictData

common opts-lib
  ghc-options:
    -Wall -Werror -Wunused-imports -Wunused-packages
    -Wmissing-export-lists -Wname-shadowing -Wredundant-constraints

library
  import:          language, opts-lib
  hs-source-dirs:  lib
  exposed-modules: Aiken.Codegen
  build-depends:
    , base               >=4.18 && <5
    , base16-bytestring  >=1.0  && <1.1
    , bytestring         >=0.11 && <0.13
    , operational        >=0.2  && <0.3

test-suite golden-tests
  import:         language, opts-lib
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Golden.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aiken-codegen
    , base
    , directory      >=1.3  && <1.5
    , hspec          >=2.10 && <3
